@@ -4,11 +4,11 @@
  * Licensed under the MIT License:
  * http://www.opensource.org/licenses/mit-license.php
  *
- * Version 2.0.1
+ * Version 2.1
  * Demo: http://www.texotela.co.uk/code/jquery/select/
  *
  * $LastChangedDate$
  * $Rev$
  *
  */
-eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('(6($){$.q.L=6(){4 e=6(a,v,t,b){4 c=Y.V("S");c.h=v,c.E=t;4 o=a.u;4 d=o.k;3(!a.y){a.y={};p(4 i=0;i<d;i++){a.y[o[i].h]=i}}3(8 a.y[v]=="N")a.y[v]=d;a.u[a.y[v]]=c;3(b){c.l=j}};4 a=O;3(a.k==0)7 5;4 f=j;4 m=B;4 g,v,t;3(8(a[0])=="A"){m=j;g=a[0]}3(a.k>=2){3(8(a[1])=="K")f=a[1];9 3(8(a[2])=="K")f=a[2];3(!m){v=a[0];t=a[1]}}5.s(6(){3(5.z.n()!="x")7;3(m){p(4 a 10 g){e(5,a,g[a],f)}}9{e(5,v,t,f)}});7 5};$.q.Z=6(b,c,d,e,f){3(8(b)!="D")7 5;3(8(c)!="A")c={};3(8(d)!="K")d=j;5.s(6(){4 a=5;$.X(b,c,6(r){$(a).L(r,d);3(8 e=="6"){3(8 f=="A"){e.W(a,f)}9{e.J(a)}}})});7 5};$.q.U=6(){4 a=O;3(a.k==0)7 5;4 b=8(a[0]);4 v,i;3(b=="D"||b=="A"||b=="6")v=a[0];9 3(b=="T")i=a[0];9 7 5;5.s(6(){3(5.z.n()!="x")7;3(!!v){4 o=5.u;4 a=o.k;p(4 i=a-1;i>=0;i--){3(v.G==I){3(o[i].h.H(v)){o[i]=M}}9 3(o[i].h==v){o[i]=M}}}9{5.R(i)}});7 5};$.q.Q=6(f){4 a=8(f)=="N"?j:!!f;5.s(6(){3(5.z.n()!="x")7;4 o=5.u;4 d=o.k;4 e=[];p(4 i=0;i<d;i++){e[i]={v:o[i].h,t:o[i].E}}e.P(6(b,c){C=b.t.n(),F=c.t.n();3(C==F)7 0;3(a){7 C<F?-1:1}9{7 C>F?-1:1}});p(4 i=0;i<d;i++){o[i].E=e[i].t;o[i].h=e[i].v}});7 5};$.q.15=6(b,d){4 v=b;4 e=8(b);4 c=d||B;3(e!="D"&&e!="6"&&e!="A")7 5;5.s(6(){3(5.z.n()!="x")7 5;4 o=5.u;4 a=o.k;p(4 i=0;i<a;i++){3(v.G==I){3(o[i].h.H(v)){o[i].l=j}9 3(c){o[i].l=B}}9{3(o[i].h==v){o[i].l=j}9 3(c){o[i].l=B}}}});7 5};$.q.14=6(b,c){4 w=c||"l";3($(b).13()==0)7 5;5.s(6(){3(5.z.n()!="x")7 5;4 o=5.u;4 a=o.k;p(4 i=0;i<a;i++){3(w=="12"||(w=="l"&&o[i].l)){$(b).L(o[i].h,o[i].E)}}});7 5};$.q.11=6(b,c){4 d=B;4 v=b;4 e=8(v);4 f=8(c);3(e!="D"&&e!="6"&&e!="A")7 f=="6"?5:d;5.s(6(){3(5.z.n()!="x")7 5;3(d&&f!="6")7 B;4 o=5.u;4 a=o.k;p(4 i=0;i<a;i++){3(v.G==I){3(o[i].h.H(v)){d=j;3(f=="6")c.J(o[i])}}9{3(o[i].h==v){d=j;3(f=="6")c.J(o[i])}}}});7 f=="6"?5:d}})(16);',62,69,'|||if|var|this|function|return|typeof|else||||||||value||true|length|selected||toLowerCase||for|fn||each||options|||select|cache|nodeName|object|false|o1t|string|text|o2t|constructor|match|RegExp|call|boolean|addOption|null|undefined|arguments|sort|sortOptions|remove|option|number|removeOption|createElement|apply|getJSON|document|ajaxAddOption|in|containsOption|all|size|copyOptions|selectOptions|jQuery'.split('|'),0,{}))
+eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('(6($){$.u.G=6(){4 e=6(a,v,t,b){4 c=P.Q("R");c.j=v,c.C=t;4 o=a.x;4 d=o.l;3(!a.n){a.n={};p(4 i=0;i<d;i++){a.n[o[i].j]=i}}3(8 a.n[v]=="M")a.n[v]=d;a.x[a.n[v]]=c;3(b){c.k=9}};4 a=N;3(a.l==0)7 5;4 f=9;4 m=q;4 g,v,t;3(8(a[0])=="z"){m=9;g=a[0]}3(a.l>=2){3(8(a[1])=="H")f=a[1];h 3(8(a[2])=="H")f=a[2];3(!m){v=a[0];t=a[1]}}5.y(6(){3(5.A.s()!="B")7;3(m){p(4 a S g){e(5,a,g[a],f)}}h{e(5,v,t,f)}});7 5};$.u.T=6(b,c,d,e,f){3(8(b)!="D")7 5;3(8(c)!="z")c={};3(8(d)!="H")d=9;5.y(6(){4 a=5;$.U(b,c,6(r){$(a).G(r,d);3(8 e=="6"){3(8 f=="z"){e.V(a,f)}h{e.I(a)}}})});7 5};$.u.W=6(){4 a=N;3(a.l==0)7 5;4 d=8(a[0]);4 v,i;3(d=="D"||d=="z"||d=="6")v=a[0];h 3(d=="X")i=a[0];h 7 5;5.y(6(){3(5.A.s()!="B")7;3(5.n)5.n=O;4 b=q;4 o=5.x;3(!!v){4 c=o.l;p(4 i=c-1;i>=0;i--){3(v.J==K){3(o[i].j.L(v)){b=9}}h 3(o[i].j==v){b=9}3(b&&a[1]===9)b=o[i].k;3(b){o[i]=O}b=q}}h{3(b&&a[1]===9)b=o[i].k;3(b){5.Y(i)}}});7 5};$.u.Z=6(f){4 a=8(f)=="M"?9:!!f;5.y(6(){3(5.A.s()!="B")7;4 o=5.x;4 d=o.l;4 e=[];p(4 i=0;i<d;i++){e[i]={v:o[i].j,t:o[i].C}}e.10(6(b,c){E=b.t.s(),F=c.t.s();3(E==F)7 0;3(a){7 E<F?-1:1}h{7 E>F?-1:1}});p(4 i=0;i<d;i++){o[i].C=e[i].t;o[i].j=e[i].v}});7 5};$.u.11=6(b,d){4 v=b;4 e=8(b);4 c=d||q;3(e!="D"&&e!="6"&&e!="z")7 5;5.y(6(){3(5.A.s()!="B")7 5;4 o=5.x;4 a=o.l;p(4 i=0;i<a;i++){3(v.J==K){3(o[i].j.L(v)){o[i].k=9}h 3(c){o[i].k=q}}h{3(o[i].j==v){o[i].k=9}h 3(c){o[i].k=q}}}});7 5};$.u.12=6(b,c){4 w=c||"k";3($(b).13()==0)7 5;5.y(6(){3(5.A.s()!="B")7 5;4 o=5.x;4 a=o.l;p(4 i=0;i<a;i++){3(w=="14"||(w=="k"&&o[i].k)){$(b).G(o[i].j,o[i].C)}}});7 5};$.u.15=6(b,c){4 d=q;4 v=b;4 e=8(v);4 f=8(c);3(e!="D"&&e!="6"&&e!="z")7 f=="6"?5:d;5.y(6(){3(5.A.s()!="B")7 5;3(d&&f!="6")7 q;4 o=5.x;4 a=o.l;p(4 i=0;i<a;i++){3(v.J==K){3(o[i].j.L(v)){d=9;3(f=="6")c.I(o[i])}}h{3(o[i].j==v){d=9;3(f=="6")c.I(o[i])}}}});7 f=="6"?5:d}})(16);',62,69,'|||if|var|this|function|return|typeof|true||||||||else||value|selected|length||cache||for|false||toLowerCase||fn|||options|each|object|nodeName|select|text|string|o1t|o2t|addOption|boolean|call|constructor|RegExp|match|undefined|arguments|null|document|createElement|option|in|ajaxAddOption|getJSON|apply|removeOption|number|remove|sortOptions|sort|selectOptions|copyOptions|size|all|containsOption|jQuery'.split('|'),0,{}))
